@@ -6,6 +6,7 @@ TBD
 	  some of the headings of the file, to match the opensource.org
 	  BSD license.
 	* -e option makes ldns-compare-zones exit with status code 2 on difference
+	* Filter out specified RR types with ldns-read-zone -e and -E options
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
